--- a/Codigo_para_Falabella.ipynb
+++ b/Codigo_para_Falabella.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "15kZQr3UntC-HWlTQxgpYzIk0rHvzELKI",
-      "authorship_tag": "ABX9TyOBYxECW4XIYTm/DE2LEX1Q",
+      "authorship_tag": "ABX9TyMRXCW9ZeM+4R0iywZ4kZq2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,7 +35,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "q-YpvFMvUhqe",
-        "outputId": "f1fd0675-5567-49f0-e7a4-640afab46f15"
+        "outputId": "c711099f-f85f-4c0f-d699-4e991186776f"
       },
       "outputs": [
         {
@@ -43,13 +43,13 @@
           "name": "stdout",
           "text": [
             "Collecting reportlab\n",
-            "  Downloading reportlab-4.4.3-py3-none-any.whl.metadata (1.7 kB)\n",
+            "  Downloading reportlab-4.4.4-py3-none-any.whl.metadata (1.7 kB)\n",
             "Requirement already satisfied: pillow>=9.0.0 in /usr/local/lib/python3.12/dist-packages (from reportlab) (11.3.0)\n",
-            "Requirement already satisfied: charset-normalizer in /usr/local/lib/python3.12/dist-packages (from reportlab) (3.4.3)\n",
-            "Downloading reportlab-4.4.3-py3-none-any.whl (2.0 MB)\n",
-            "\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/2.0 MB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m\u001b[90m━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.2/2.0 MB\u001b[0m \u001b[31m37.2 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.0/2.0 MB\u001b[0m \u001b[31m29.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "Requirement already satisfied: charset-normalizer in /usr/local/lib/python3.12/dist-packages (from reportlab) (3.4.4)\n",
+            "Downloading reportlab-4.4.4-py3-none-any.whl (2.0 MB)\n",
+            "\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/2.0 MB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[91m━━━━━━━\u001b[0m\u001b[90m╺\u001b[0m\u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.3/2.0 MB\u001b[0m \u001b[31m10.5 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K   \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m \u001b[32m1.9/2.0 MB\u001b[0m \u001b[31m34.4 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.0/2.0 MB\u001b[0m \u001b[31m23.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hInstalling collected packages: reportlab\n",
-            "Successfully installed reportlab-4.4.3\n"
+            "Successfully installed reportlab-4.4.4\n"
           ]
         }
       ],
@@ -60,7 +60,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!pip install reportlab\n",
+        "\n",
         "import pandas as pd\n",
         "from reportlab.lib.units import cm\n",
         "from reportlab.pdfgen import canvas\n",
@@ -142,9 +142,13 @@
         "    barcode.drawOn(c, barcode_x, barcode_y)\n",
         "\n",
         "    # --- Texto numérico encima del código de barras ---\n",
+        "    c.saveState()\n",
         "    c.setFont(\"Helvetica\", 0.3*cm)\n",
-        "    text_y_position = barcode_y + barcode_height + 0.2*cm\n",
-        "    c.drawCentredString(page_width/2, text_y_position, barcode_texto)\n",
+        "    text_y_position = barcode_y + barcode_height + 0.4*cm\n",
+        "    c.translate(page_width/2, text_y_position)  # mover origen al centro\n",
+        "    c.rotate(180)  # girar 180 grados\n",
+        "    c.drawCentredString(0, 0, barcode_texto)  # dibujar en el nuevo origen\n",
+        "    c.restoreState()\n",
         "\n",
         "    # --- Nueva página si no es la última ---\n",
         "    if idx < len(df) - 1:\n",
@@ -160,9 +164,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BmzhqlkAUkqF",
-        "outputId": "b29b109a-e630-4206-ce7b-6742aaa322f4"
+        "outputId": "acab778a-53b3-4742-fde6-ec904cd7a018"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
